--- a/index.html
+++ b/index.html
@@ -1,13 +1,35 @@
+
 <!doctype html>
 <html lang="en" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+     <meta name="robots" content="index, follow" />
+     <link rel="canonical" href="https://contact-me-gilt.vercel.app/" />
+
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>agency2</title>
+
+    <title>Donald Mathew | Web Developer & Digital Solutions Expert</title>
+
+    <meta 
+      name="description" 
+      content="Donald Mathew is a web developer specializing in React, full-stack MERN applications, and modern digital solutions that move businesses forward." 
+    />
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="Donald Mathew | Web Developer & Digital Solutions Expert" />
+    <meta property="og:description" content="Building modern, high-performance websites and applications with React and MERN stack." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://yourdomain.com" />
+    <meta property="og:image" content="https://yourdomain.com/preview.png" />
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+
+
+
